fixed issues with footprint caching